# MTIP

./: +  CODEOWNERS  LICENSE  README.md
Applications/: README.md
Applications/Example_Controller/: CMakeLists.txt  Controller.cpp
Applications/Example_Device/: CMakeLists.txt  Device.cpp
Evaluation/: readme.md
Evaluation/Impairments/: PathA_impairments.csv  PathB_impairments.csv  README.md
Evaluation/MPQUIC/: mpquic-1-Filter-Background-client_stdout_log_20250325_180416.txt  mpquic-1-Filter-Background-client_stdout_log_20250325_183204.txt  mpquic-1-Filter-Background-client_stdout_log_20250325_184311.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_180006.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_180130.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_180253.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_180416.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_180540.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_180703.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_180827.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_180950.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_182220.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_182344.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_182507.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_182630.txt  mpquic-1-Filter-Background-robot_stderr_log_20250325_182754.txt  (+288 more)
Models/: ModelB_Losses3.pml  ModelB_NoLoss.pml  PromelaModel.pml  README.md  UppaalModel.xml
Models/Spin - Promela/: ModelA.pml  (+1 more)
(+2069 files in other folders)
